docs: add documentation for get opening by id
