# handler/getOpeningById.go
@@ -8,6 +8,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /api/v1
+
+// @Summary get opening by id
+// @Description show a job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id path string true "Opening identification"
+// @Success 200 {object} GetOpeningByIdResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening/{id} [get]
 func GetOpeningByIdHandler(ctx *gin.Context) {
 	id := ctx.Param("id")
 
